<resources>
    <string name="app_name">AerolineaLoremIpsum_PMDM</string>
    <string name="cena">Cena</string>
    <string name="todo">TODO</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="srta">Srta</string>
    <string name="sr">Sr</string>
    <string name="sra">Sra</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="datos_personales">Datos Personales</string>
    <string name="extras">Extras</string>
    <string name="viajar_con_mascota">Viajar con Mascota</string>
    <string name="asiento_con_ventanilla">Asiento con ventanilla</string>
    <string name="comidas">Comidas</string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="preferencias_del_viaje">Preferencias del Viaje</string>
    <string name="seguro_de_viaje">Seguro de Viaje</string>
    <string name="sobrecoste_de_5_50_adicionales">Sobrecoste de 5.50€ adicionales</string>
    <string name="aceptar_los_terminos_y_condiciones">Aceptar los Terminos y Condiciones</string>
    <string name="acceso_preferente">Acceso Preferente</string>
    <string name="comprar">Comprar</string>
    <string name="descripcionImagen">Descripcion imagen</string>
    <string name="destinos">Destinos</string>
    <string name="maletas_recomendadas">Maletas Recomendadas</string>
    <string name="mejores_hoteles">Mejores Hoteles</string>
    <string name="mis_documentos_de_viajes">Mis documentos de Viajes</string>
    <string name="mis_compa_eros_de_viaje">Mis compañeros de Viaje</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="mis_viajes">Mis viajes</string>
    <string name="tarjetas_de_embarque">Tarjetas de embarque</string>
    <string name="informaci_n_sobre_el_vuelo">Información sobre el vuelo</string>
    <string name="info_actualizada">Info actualizada</string>
    <string name="vales_de_regalo">Vales de regalo</string>
    <string name="revista_de_vuelo">Revista de vuelo</string>
    <string name="t_rmino_y_codiciones">Término y codiciones</string>
    <string name="centro_de_ayuda">Centro de ayuda</string>
    <string name="contactar_con_la_aerol_nea">Contactar con la aerolínea</string>
    <string name="pol_tica_de_privacidad">Política de privacidad</string>
    <string name="configuraci_n_de_privacidad">Configuración de privacidad</string>
    <string name="enlaces">Enlaces</string>
    <string name="factura">Factura</string>
    <string name="vuelo">Vuelo</string>
    <string name="_0">0€</string>
    <string name="movilidad_reducida">Movilidad Reducida</string>
    <string name="primera_clase">Primera Clase</string>
    <string name="mascota">Mascota</string>
    <string name="ventanilla">Ventanilla</string>
    <string name="total">Total :</string>
    <string name="volver">VOLVER</string>
    <string name="inicio">INICIO</string>
</resources>